Remove MD5 uppercase passwords from Dummification